--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -65,7 +65,10 @@
             {% if item.poster %}
                 <img src="{{ item.poster }}" alt="Poster" class="poster">
             {% endif %}
-            <span class="media-type-badge {{ 'movie' if item.media_type == 'Movie' else 'tvshow' }}">{{ item.media_type or 'Movie' }}</span>
+            <span class="media-type-badge {{ 'movie' if item.media_type == 'Movie' else 'tvshow' }}">
+                <img src="{{ url_for('static', filename='img/' + ('movie-badge.svg' if item.media_type == 'Movie' else 'tvshow-badge.svg')) }}" alt="">
+                {{ item.media_type or 'Movie' }}
+            </span>
             <h2>{{ item.title }} ({{ item.year }})</h2>
             {% if item.runtime and item.runtime != 'N/A' %}
             <p><strong>Runtime:</strong> {{ item.runtime }} min</p>
