--- a/templates/watchlist.html
+++ b/templates/watchlist.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Watchlist | PlexRoulette</title>
+    <title>Watchlist | MediaRoulette</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script>
@@ -53,7 +53,7 @@
     </div>
 
     <div class="logo-container">
-        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="PlexRoulette Logo">
+        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="MediaRoulette Logo">
         <h1>Watchlist</h1>
     </div>
 
