--- a/templates/plex_login.html
+++ b/templates/plex_login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign In | PlexRoulette</title>
+    <title>Sign In | MediaRoulette</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
@@ -94,7 +94,7 @@
 <body>
     <div class="login-container">
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="PlexRoulette Logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="MediaRoulette Logo">
         </div>
 
         <div class="login-card">
