--- a/templates/setup.html
+++ b/templates/setup.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Setup | PlexRoulette</title>
+    <title>Setup | MediaRoulette</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
     <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <style>
@@ -97,11 +97,11 @@
 <body>
     <div class="setup-container">
         <div class="logo-container">
-            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="PlexRoulette Logo">
+            <img src="{{ url_for('static', filename='img/logo.png') }}" alt="MediaRoulette Logo">
         </div>
 
         <div class="setup-card">
-            <h1>Welcome to PlexRoulette</h1>
+            <h1>Welcome to MediaRoulette</h1>
             <p>Create your admin account to get started.</p>
 
             {% if error %}
